updating node backend

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "body-parser": "^1.0.2",
     "express": "4.0.0",
     "mongodb": "^2.2.19",
-    "mongoose": "4.6.3"
+    "mongoose": "4.6.3",
+	"mongoose-query-random": "1.0.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
